--- a/style.css
+++ b/style.css
@@ -1,10 +1,45 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 #main{
     font-size: 100px;
     text-align: center;
     color: rgb(242, 255, 0);
 }
 
-#btn-signin{
+#btn1{
     position: relative;
+    text-align: center;
     
+}
+
+#btn-signin{
+    padding: 20px;
+    color: rgb(199, 199, 15);
+    background-color: black;
+    border-radius: 30px;
+
+}
+
+#btn-signin:hover{
+    color:black ;
+    background-color: rgb(199, 199, 15);
+    transition: 0.5s;
+}
+
+ul{
+    list-style-type: none;
+
+
+}
+
+li{
+    display: inline;
+    margin-right: 30px;
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
 }
